--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -53,6 +53,8 @@
                     Chamados por Hora
                 {% elif categoria == 'dias' %}
                     Chamados por Dia
+                {% elif categoria == 'meses' %}
+                    Chamados por Mês
                 {% else %}
                     Clientes
                 {% endif %}
